# AI-Supply-Chain-Optimizer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
etl/: generate_synthetic.py
tests/: test_etl.py
